# bayes3d

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .swp  404.html  DEVELOPING.md  INSTANCE_SETUP_README.md  README.md  demo.py  demo_c2f.ipynb  demo_c2f_2.ipynb  demo_genjax.ipynb  download.sh  index.html  likelihood_debug.ipynb  mkdocs.yml  nvdiffrast_test.py  pyproject.toml  pytorch_check.py  requirements-dev.txt  requirements.txt  run_mcs_physics.py  setup.py  test.py  test_jax_renderer.py  test_jax_renderer_bwd.py  test_jax_renderer_fwd.py
assets/genjax/: .flake8  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
assets/genjax/.github/ISSUE_TEMPLATE/: bug_report.md  design-refactor.md  documentation-issue.md  genjax-extension-proposal.md
assets/genjax/.github/workflows/: ci.yml  docs.yml  safety.yml
assets/genjax/benchmarks/micro/: test_blackjax.py  test_mh.py
assets/genjax/docs/: codeofconduct.md  contributing.md  homepage.md  license.md
assets/genjax/docs/css/: fonts.css
assets/genjax/docs/genjax/: diff_jl.md  language_aperitifs.md  notebooks.md
assets/genjax/docs/genjax/concepts/: generative_functions.md
assets/genjax/docs/js/: mathjax.js
assets/genjax/notebooks/: _metadata.yml  _quarto.yml  custom-dark.scss  custom.scss  index.ipynb
assets/genjax/notebooks/advanced/coryx/: coryx.ipynb
assets/genjax/notebooks/advanced/gen_sp/: gen_sp.ipynb
assets/genjax/notebooks/advanced/recurse_combinator/: recurse_combinator.ipynb
assets/genjax/notebooks/advanced/smc_language/: smc_language.ipynb
assets/genjax/notebooks/concepts/combinators/: intro_to_combinators.ipynb
assets/genjax/notebooks/concepts/gradient_interfaces/: gradient_interfaces.ipynb
assets/genjax/notebooks/concepts/incremental_computation/: incremental.ipynb
assets/genjax/notebooks/hidden/: debugging_with_harvest.ipynb  genjax_expo_0.ipynb  jax_tutorial.ipynb  scratch.ipynb
assets/genjax/notebooks/internals/developers/: jax_intro.ipynb
assets/genjax/notebooks/internals/impl_builtin_language/: impl_builtin_language.ipynb
assets/genjax/site/: 404.html  codeofconduct.html  contributing.html  homepage.html  index.html  license.html  objects.inv  sitemap.xml
assets/genjax/site/css/: custom.css  mkdocstrings.css
assets/genjax/site/genjax/: diff_jl.html  language_aperitifs.html  notebooks.html
assets/genjax/site/genjax/concepts/: generative_functions.html
assets/genjax/site/notebooks/: index.html
assets/genjax/site/notebooks/advanced/coryx/: coryx.html
assets/genjax/site/notebooks/advanced/gen_sp/: gen_sp.html
assets/genjax/site/notebooks/advanced/recurse_combinator/: recurse_combinator.html
assets/genjax/site/notebooks/advanced/smc_language/: smc_language.html
assets/genjax/site/notebooks/concepts/combinators/: intro_to_combinators.html
assets/genjax/site/notebooks/concepts/gradient_interfaces/: gradient_interfaces.html
assets/genjax/site/notebooks/concepts/incremental_computation/: incremental.html
assets/genjax/site/notebooks/concepts/introduction/: intro_to_genjax.html
assets/genjax/site/notebooks/hidden/: debugging_with_harvest.html  genjax_expo_0.html  jax_tutorial.html  scratch.html
assets/genjax/site/notebooks/internals/developers/: jax_intro.html
assets/genjax/site/notebooks/internals/impl_builtin_language/: impl_builtin_language.html
assets/genjax/site/notebooks/site_libs/bootstrap/: bootstrap.min.css
assets/genjax/site/search/: search_index.js
assets/genjax/src/genjax/: __init__.py  adev.py  console.py  debugging.py  extras.py  inference.py  information.py  interface.py  language_decorator.py  learning.py  typing.py  utilities.py
assets/genjax/src/genjax/_src/: console.py  interface.py  language_decorator.py  utilities.py
assets/genjax/src/genjax/_src/adev/: __init__.py  builtin_conversion.py  lang.py  primitive_distributions.py
assets/genjax/src/genjax/_src/core/: __init__.py  pretty_printing.py  pytree.py  typing.py
assets/genjax/src/genjax/_src/core/datatypes/: generative.py  hashabledict.py  masks.py  tracetypes.py  tree.py  trie.py
assets/genjax/src/genjax/_src/core/interpreters/: README.md  __init__.py  context.py  primitives.py  propagate.py  staging.py
assets/genjax/src/genjax/_src/core/transforms/: harvest.py  incremental.py
assets/genjax/src/genjax/_src/debugging/: __init__.py
assets/genjax/src/genjax/_src/extras/: __init__.py
assets/genjax/src/genjax/_src/extras/blackjax/: __init__.py  blackjax.py
assets/genjax/src/genjax/_src/extras/tinygp/: __init__.py  tinygp.py
assets/genjax/src/genjax/_src/generative_functions/: __init__.py
assets/genjax/src/genjax/_src/inference/: importance_sampling.py  map_update.py  variational_inference.py
assets/genjax/src/genjax/_src/inference/mcmc/: kernel.py  (+2 more)
assets/genjax/src/genjax/_src/information/: aide.py  eevi.py  sdos.py
assets/genjax/src/genjax/_src/learning/: state.py
assets/genjax/src/genjax/core/: __init__.py  datatypes.py  hashabledict.py  incremental.py  interpreters.py
assets/genjax/src/genjax/generative_functions/: __init__.py
assets/genjax/src/genjax/generative_functions/builtin/: __init__.py
assets/genjax/src/genjax/generative_functions/combinators/: __init__.py
assets/genjax/src/genjax/generative_functions/distributions/: __init__.py  coryx.py  custom.py  gensp.py
assets/genjax/tests/adev/: test_adev.py
assets/genjax/tests/core/: test_core_tracetypes.py
assets/genjax/tests/generative_functions/builtin/: test_addr.py  test_assess.py  test_builtin_choice_map.py  test_builtin_tracetypes.py  test_closure_convert.py  test_custom_pytree.py  test_forward_ref.py  test_gradients.py  test_importance.py  test_inline.py  test_selection.py  test_simulate.py  test_update.py
assets/genjax/tests/generative_functions/combinators/: test_switch.py  test_unfold.py
assets/genjax/tests/generative_functions/distributions/: test_categorical.py
assets/genjax/tests/inference/mcmc/: test_metropolis_hastings.py
assets/genjax/tests/misc/: test_404.py
(+1189 files in other folders)
