[tool.poetry]
name = "bayes3d"
version = "0.0.1"
description = "Bayes3D"
authors = ["Nishad Gothoskar <nishad@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
wheel = "^0.40.0"
ipython = "^8.14.0"
jupyter = "^1.0.0"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
opencv-python = "^4.8.0.74"
open3d = "^0.17.0"
graphviz = "^0.20.1"
distinctipy = "^1.2.2"
moderngl = "^5.8.2"
trimesh = "^3.22.4"
ninja = "^1.11.1"
pyransac3d = "^0.6.0"
meshcat = "^0.3.2"
h5py = "^3.9.0"
gdown = "^4.7.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
pytest = "^7.4.0"
zmq = "^0.0.0"
tqdm = "^4.65.0"
jupyterlab = "^4.0.3"
imageio = "^2.31.1"
timm = "^0.9.2"
joblib = "^1.3.1"
pdoc3 = "^0.10.0"
genjax = {git = "https://github.com/probcomp/genjax.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
