[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes3d"
version = "0.0.1"
authors = [
    {name = "Nishad Gothoskar", email = "nishadg@mit.edu"},
]
description = "Probabilistic inference in 3D."
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "artificial-intelligence",
    "probabilistic-programming",
    "bayesian-inference",
    "differentiable-programming"
    ]
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]
# extend-include = ["*.ipynb"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
exclude = ["bayes3d/_mkl/*.py"]
extend-select = ["I"]
select = ["E4", "E7", "E9", "F"]

# F403 disables errors from `*` imports, which we currently use heavily.
ignore = ["F403"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.setuptools.packages.find]
include = ["bayes3d"]
namespaces = false
