[tool.poetry]
name = "genjax"
version = "0.0.1"
description = "Gen ⊗ JAX"
authors = [
  "McCoy R. Becker <mccoyb@mit.edu>, MIT Probabilistic Computing Project <probcomp-assist@csail.mit.edu>",
]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/probcomp/genjax"
repository = "https://github.com/probcomp/genjax"
documentation = "https://probcomp.github.io/genjax/"
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.urls]
Changelog = "https://github.com/probcomp/genjax/releases"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jax = "^0.4.10"
numpy = "^1.24.0"
tensorflow-probability = "^0.19.0"
rich = "^12.6.0"
jaxtyping = "^0.2.9"
optax = "^0.1.4"
beartype = "^0.12.0"
plum-dispatch = "^2.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
coverage = "^7.0.0"
mypy = "^0.991"
pytest-benchmark = "^4.0.0"
pytest-xdist = {version = "^3.2.0", extras = ["psutil"] }
autoflake8 = "^0.4.0"
isort = "^5.11.3"
xdoctest = "^1.1.0"
safety = "^2.3.5"
darglint = "^1.8.1"
jupyterlab = "^3.5.1"
docformatter = {version = "^1.5.1", extras = ["tomli"]}
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
blackjax = "^0.9.6"
tinygp = "^0.2.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = {version = "^0.20.0", extras=["python"]}
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-git-committers-plugin-2 = "^1.1.1"
markdown-exec = {version="^1.2.0", extras=["ansi"]}

[tool.poetry.extras]
tinygp = ["tinygp"]
blackjax = ["blackjax"]
all = ["blackjax", "tinygp"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
